--- a/templates/index.html
+++ b/templates/index.html
@@ -12,18 +12,20 @@
     <a class="btn btn-primary " href="/book_1">Читать</a>
     </nav>
     <nav class="navbar">
-    <img src="/static/img/Путешествия Гулливера.jpg" width='350' height='500'
+    <img src="/static/img/Преступление и наказание.jpg" width='350' height='500'
          alt="здесь должна была быть картинка, но не нашлась">
-    <h3> Путешествия Гулливера </h3>
+    <h3> Преступление и наказание </h3>
     <a class="btn btn-primary " href="/book_2">Читать</a>
     </nav>
     <nav class="navbar">
-    <img src="/static/img/Два капитана.jpg" width='350' height='500'
+    <img src="/static/img/Отцы и дети.jpg" width='350' height='500'
          alt="здесь должна была быть картинка, но не нашлась">
-    <h3> Два капитана </h3>
+    <h3> Отцы и дети </h3>
     <a class="btn btn-primary" href="/book_3">Читать</a>
     </nav>
+        <nav>
         <a href="/reviews" class="btn btn-secondary">Отзывы о книгах</a>
+        </nav>
     </header>
 </ul>
 {% endblock %}
