--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -12,7 +12,7 @@
         {{item.content}}
     </div>
     <div>
-        Автор - {{item.user.name}}, Дата написания - {{item.created_date}}
+        Дата написания - {{item.created_date}}
     </div>
 </div>
 {% endfor %}
